@@ -2,6 +2,7 @@
 
 - Fix a bug introduced in 0.184 causing Enum's fromString(String) method to be
   ignored.
+- Trim whitespace when loading configuration.
 - When a class defines fromString(String) method, valueOf(String) method or
   a String-parameterized constructor, attempt the conversion using only first
   available conversion method.
